Fix: park selection spacing

--- a/src/component/ParkSelection/ParkSelection.css
+++ b/src/component/ParkSelection/ParkSelection.css
@@ -57,7 +57,8 @@ body.default-font .selection-page-p {
   gap: 30px;
   padding: 20px;
   height: 87vh;
-  width: 60vw;
+  /* width: 60vw; */
+  max-width: 55vw;
   overflow: auto;
   left: 20%;
 }
